--- a/2019/2/MAT1620/3.5/solucion.tex
+++ b/2019/2/MAT1620/3.5/solucion.tex
@@ -463,6 +463,9 @@ Sabemos que
 		= \lim\limits_{n \ra \infty} \dfrac{e^{-n-1}}{e^{-n}}
 		= e^{-1} < 1$$
 		Por lo tanto, es convergente. De la misma forma, la serie $\sum\limits_{n=1}^{\infty}f(n)$ también lo es.
+\\
+\\
+Otra forma de determinar la convergencia es notando que esta es una serie geométrica con $r = \dfrac{1}{e} < 1$.
 \end{solucion}
 \item Considere la representación decimal de un número,
 $$0,d_1d_2d_3... = \dfrac{d_1}{10} + \dfrac{d_2}{10^2} + \dfrac{d_3}{10^3}$$
