Solución de 2019/2/MAT1620/3

--- a/2019/2/MAT1620/3/solucion.tex
+++ b/2019/2/MAT1620/3/solucion.tex
@@ -126,7 +126,7 @@
 \end{tasks}
 \begin{solucion}
 \begin{center}
-\includegraphics[width=14cm]{../../../../img/mapa_series}
+\includegraphics[width=12cm]{../../../../img/mapa_series}
 \end{center}
 \begin{enumerate}[a)]
 \item $\sum\limits_{n=1}^{\infty}\dfrac{5n^3}{7n+n^3-1}$\\
@@ -228,6 +228,9 @@ Sabemos que
 		= \lim\limits_{n \ra \infty} \dfrac{e^{-n-1}}{e^{-n}}
 		= e^{-1} < 1$$
 		Por lo tanto, es convergente. De la misma forma, la serie $\sum\limits_{n=1}^{\infty}f(n)$ también lo es.
+\\
+\\
+Otra forma de determinar la convergencia es notando que esta es una serie geométrica con $r = \dfrac{1}{e} < 1$.
 \end{solucion}
 \item Considere la representación decimal de un número,
 $$0,d_1d_2d_3... = \dfrac{d_1}{10} + \dfrac{d_2}{10^2} + \dfrac{d_3}{10^3}$$
