Enunciado de 2018/2/MAT220E/9

--- a/2018/2/MAT220E/9/enunciado.tex
+++ b/2018/2/MAT220E/9/enunciado.tex
@@ -115,5 +115,15 @@
 \end{center}
 
 \begin{preguntas}
+\item Para cada función, encontrar la serie de Maclaurin que la representa
+\begin{tasks}(2)
+\task $f(x) = cos(x)$
+\task $f(x) = \dfrac{1}{1-x}$
+\end{tasks}
+\item Sea la función
+	$$f(x) = ln(1+x)$$
+	Exprese $f(x)$ como una serie de potencias
+\item Expresar la siguiente serie de potencias como una función
+	$$\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$$
 \end{preguntas}
 \end{document}
