--- a/2018/2/MAT220E/9/enunciado.tex
+++ b/2018/2/MAT220E/9/enunciado.tex
@@ -125,5 +125,23 @@
 	Exprese $f(x)$ como una serie de potencias
 \item Expresar la siguiente serie de potencias como una función
 	$$\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$$
+\item Sean los vectores
+		$$
+	v_1 = \begin{pmatrix}
+	2\\
+	1\\
+	5
+\end{pmatrix};\qquad
+	v_2 = \begin{pmatrix}
+	-1\\
+	-3\\
+	0
+\end{pmatrix}$$
+\begin{enumerate}[a)]
+\item Buscar un vector $v_3$ que sea perpendicular a $v_1$ y $v_2$ y verificar que efectivamente sea perpendicular a ambos.
+\item Buscar un vector paralelo a $(v_2-v_3)$ y verificar que lo sea
+\item Encontrar un vector perpendicular a $(v_3 + 3v_1)$
+\end{enumerate}
+\item Determinar el plano que pasa por los puntos $P_1(4,-1,-2)$, $P_2(0,0,1)$ y $P_3(2,-3,0)$.
 \end{preguntas}
 \end{document}
