Enunciado de 2019/2/MAT1620/4

--- a/2019/2/MAT1620/4/enunciado.tex
+++ b/2019/2/MAT1620/4/enunciado.tex
@@ -121,9 +121,8 @@
 \task $\sum\limits_{n=2}^{\infty}\dfrac{n}{(n+1)^2ln(n)}$
 \task $\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$
 \end{tasks}
-\item Considere una función $f$ continua en $\R$, decreciente y no negativa tal que
-	$$\lim_{x\ra\infty}\dfrac{f(x)}{e^{-x}}=5$$
-	Analice la convergencia de la serie $\sum\limits_{n=1}^{\infty}f(n)$
+\item Estudiar, según el valor de $\lambda \in \R$, la convergencia de la serie
+	$$\sum\limits_{n=1}^{\infty}ln(1+n^{-\lambda})$$
 \item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
 \begin{tasks}(3)
 \task $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n+1}}{\sqrt[]{n}}$
