Enunciado de 2019/2/MAT1620/4

--- a/2019/2/MAT1620/4/enunciado.tex
+++ b/2019/2/MAT1620/4/enunciado.tex
@@ -115,12 +115,12 @@
 \end{center}
 
 \begin{preguntas}
-\item Determine si las siguientes series convergen o divergen.
-\begin{tasks}(3)
-\task $\sum\limits_{n=1}^{\infty}\dfrac{n}{n^4+1}$
-\task $\sum\limits_{n=2}^{\infty}\dfrac{n}{(n+1)^2ln(n)}$
-\task $\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$
-\end{tasks}
+\item Determina si las siguientes series convergen o divergen
+\begin{enumerate}[a)]
+\item 
+\item 
+\item 
+\end{enumerate}
 \item Estudiar, según el valor de $\lambda \in \R$, la convergencia de la serie
 	$$\sum\limits_{n=1}^{\infty}ln(1+n^{-\lambda})$$
 \item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
