Enunciado de 2019/2/MAT1620/4

--- a/2019/2/MAT1620/4/enunciado.tex
+++ b/2019/2/MAT1620/4/enunciado.tex
@@ -116,11 +116,11 @@
 
 \begin{preguntas}
 \item Determina si las siguientes series convergen o divergen
-\begin{enumerate}[a)]
-\item 
-\item 
-\item 
-\end{enumerate}
+\begin{tasks}(3)
+\task 
+\task 
+\task 
+\end{tasks}
 \item Estudiar, según el valor de $\lambda \in \R$, la convergencia de la serie
 	$$\sum\limits_{n=1}^{\infty}ln(1+n^{-\lambda})$$
 \item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
