--- a/2019/2/MAT1620/4/solucion.tex
+++ b/2019/2/MAT1620/4/solucion.tex
@@ -116,11 +116,11 @@
 
 \begin{preguntas}
 \item Determina si las siguientes series convergen o divergen
-\begin{enumerate}[a)]
-\item 
-\item 
-\item 
-\end{enumerate}
+\begin{tasks}(3)
+\task 
+\task 
+\task 
+\end{tasks}
 \begin{solucion}
 
 \begin{enumerate}[a)]
