Enunciado de 2019/2/MAT1620/4

--- a/2019/2/MAT1620/4/enunciado.tex
+++ b/2019/2/MAT1620/4/enunciado.tex
@@ -115,12 +115,8 @@
 \end{center}
 
 \begin{preguntas}
-\item Determina si las siguientes series convergen o divergen
-\begin{tasks}(3)
-\task 
-\task 
-\task 
-\end{tasks}
+\item Determina si la siguiente serie converge o diverge
+$$\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$$
 \item Estudiar, según el valor de $\lambda \in \R$, la convergencia de la serie
 	$$\sum\limits_{n=1}^{\infty}ln(1+n^{-\lambda})$$
 \item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
