Enunciado de 2019/2/MAT1620/4

--- a/2019/2/MAT1620/4/enunciado.tex
+++ b/2019/2/MAT1620/4/enunciado.tex
@@ -127,7 +127,7 @@ $$\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$$
 \end{tasks}
 \item Determine el radio y los intervalos de convergencia de las siguientes series
 \begin{tasks}(3)
-\task $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n-1}(x+3)}{3n}$
+\task $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n-1}(x+3)^n}{3n}$
 \task $\sum\limits_{n=2}^{\infty}\dfrac{2(x-4)^n}{n}$
 \task $\sum\limits_{n=2}^{\infty}\dfrac{(x-2)^n}{2^{n+1}}$
 \end{tasks}
