--- a/2018/1/MAT220E/9/solucion.tex
+++ b/2018/1/MAT220E/9/solucion.tex
@@ -57,7 +57,7 @@
 }
 
 \newcommand{\ayudantia}{{\sc Ayudantía 9}}
-\newcommand{\tituloayu}{}
+\newcommand{\tituloayu}{Series de Taylor y repaso vectores}
 \newcommand{\fecha}{10 de septiembre de 2019}
 \newcommand{\sigla}{MAT220E}
 \newcommand{\nombre}{Cálculo II}
